# ovr-mobile-sys

./: Cargo.toml  LICENSE  README.md  build.rs  generate_bindings.sh
VrApi/: wrapper.h
VrApi/Include/: VrApi_Version.h
src/: bindings.rs  bindings_android.rs  helpers.rs  lib.rs
